Cast Modifier crashes upon entering Edit Mode #75156

Closed
opened 2020-03-28 12:01:17 +01:00 by Henrik D. · 10 comments
Member

System Information
Operating system: Linux (Debian bullseye)
Graphics card: Nvidia Geforce GTX 1070

Blender Version
Broken: from 82c51d0edb up to current master 2.83.11
Worked: before 82c51d0edb

Short description of error
If the cast modifier uses the geometry of a generate modifier it will cause a crash upon entering edit mode with edit mode visibility turned on

Exact steps for others to reproduce the error

  1. add a screw modifier to the default cube
  2. add a cast modifier to the default cube
  3. make the cast modifier active in edit mode
  4. enter edit mode
**System Information** Operating system: Linux (Debian bullseye) Graphics card: Nvidia Geforce GTX 1070 **Blender Version** Broken: from 82c51d0edba up to current master 2.83.11 Worked: before 82c51d0edba **Short description of error** If the cast modifier uses the geometry of a generate modifier it will cause a crash upon entering edit mode with edit mode visibility turned on **Exact steps for others to reproduce the error** 1. add a screw modifier to the default cube 2. add a cast modifier to the default cube 3. make the cast modifier active in edit mode 4. enter edit mode
Author
Member

Added subscriber: @HDMaster84

Added subscriber: @HDMaster84
Campbell Barton was assigned by Henrik D. 2020-03-28 12:01:54 +01:00
Author
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @brecht

Added subscriber: @brecht

Please ensure the bug is fully triaged when setting it to confirmed.

Please ensure the bug is fully triaged when setting it to confirmed.
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member
- 0	 BKE_id_free_ex at blender/source/blender/blenkernel/intern/lib_id_delete.c:162
- 1	 BKE_id_free at blender/source/blender/blenkernel/intern/lib_id_delete.c:251
- 2	 deformVertsEM at blender/source/blender/modifiers/intern/MOD_cast.c:517
- 3	 modwrap_deformVertsEM at blender/source/blender/blenkernel/intern/modifier.c:991
- 4	 editbmesh_calc_modifiers at blender/source/blender/blenkernel/intern/DerivedMesh.c:1553
- 5	 editbmesh_build_data at blender/source/blender/blenkernel/intern/DerivedMesh.c:1825
- 6	 makeDerivedMesh at blender/source/blender/blenkernel/intern/DerivedMesh.c:1897
- 7	 BKE_object_handle_data_update at blender/source/blender/blenkernel/intern/object_update.c:190
- 8	 BKE_object_eval_uber_data at blender/source/blender/blenkernel/intern/object_update.c:385
- 9	 decltype(std::__1::forward<void (*&)(Depsgraph*, Scene*, Object*)>(fp)(std::__1::forward<Depsgraph*>(fp0), std::__1::forward<Scene*&>(fp0), std::__1::forward<Object*&>(fp0))) std::__1::__invoke<void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&>(void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*&&, Scene*&, Object*&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/type_traits:4339
- 10	 std::__1::__bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&>, __is_valid_bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&> >::value>::type std::__1::__apply_functor<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, 0ul, 1ul, 2ul, std::__1::tuple<Depsgraph*&&> >(void (*&)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>&, std::__1::__tuple_indices<0ul, 1ul, 2ul>, std::__1::tuple<Depsgraph*&&>&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:2216
- 11	 std::__1::__bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&>, __is_valid_bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&> >::value>::type std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>::operator()<Depsgraph*>(Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:2249
- 12	 decltype(std::__1::forward<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&>(fp)(std::__1::forward<Depsgraph*>(fp0))) std::__1::__invoke<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*>(std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/type_traits:4339
- 13	 void std::__1::__invoke_void_return_wrapper<void>::__call<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*>(std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/__functional_base:349
- 14	 std::__1::__function::__func<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>, std::__1::allocator<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&> >, void (Depsgraph*)>::operator()(Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:1562
- 15	 std::__1::function<void (Depsgraph*)>::operator()(Depsgraph*) const at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:1913
- 16	 DEG::(anonymous namespace)::evaluate_node(DEG::(anonymous namespace)::DepsgraphEvalState const*, DEG::OperationNode*) at blender/source/blender/depsgraph/intern/eval/deg_eval.cc:116
- 17	 DEG::(anonymous namespace)::deg_task_run_func(TaskPool*, void*, int) at blender/source/blender/depsgraph/intern/eval/deg_eval.cc:127
- 18	 handle_local_queue [inlined] at blender/source/blender/blenlib/intern/task.c:420
- 19	 BLI_task_pool_work_and_wait at blender/source/blender/blenlib/intern/task.c:944
- 20	 DEG::deg_evaluate_on_refresh(DEG::Depsgraph*) at blender/source/blender/depsgraph/intern/eval/deg_eval.cc:406
- 21	 ::DEG_evaluate_on_refresh(Main *, Depsgraph *) at blender/source/blender/depsgraph/intern/depsgraph_eval.cc:64
- 22	 scene_graph_update_tagged at blender/source/blender/blenkernel/intern/scene.c:1314
- 23	 BKE_scene_graph_update_tagged at blender/source/blender/blenkernel/intern/scene.c:1353
- 24	 wm_event_do_depsgraph at blender/source/blender/windowmanager/intern/wm_event_system.c:359
- 25	 wm_event_do_refresh_wm_and_depsgraph at blender/source/blender/windowmanager/intern/wm_event_system.c:385
- 26	 wm_event_do_notifiers at blender/source/blender/windowmanager/intern/wm_event_system.c:550
- 27	 WM_main at blender/source/blender/windowmanager/intern/wm.c:450
#28	 main at blender/source/creator/creator.c:524
```lines=8 - 0 BKE_id_free_ex at blender/source/blender/blenkernel/intern/lib_id_delete.c:162 - 1 BKE_id_free at blender/source/blender/blenkernel/intern/lib_id_delete.c:251 - 2 deformVertsEM at blender/source/blender/modifiers/intern/MOD_cast.c:517 - 3 modwrap_deformVertsEM at blender/source/blender/blenkernel/intern/modifier.c:991 - 4 editbmesh_calc_modifiers at blender/source/blender/blenkernel/intern/DerivedMesh.c:1553 - 5 editbmesh_build_data at blender/source/blender/blenkernel/intern/DerivedMesh.c:1825 - 6 makeDerivedMesh at blender/source/blender/blenkernel/intern/DerivedMesh.c:1897 - 7 BKE_object_handle_data_update at blender/source/blender/blenkernel/intern/object_update.c:190 - 8 BKE_object_eval_uber_data at blender/source/blender/blenkernel/intern/object_update.c:385 - 9 decltype(std::__1::forward<void (*&)(Depsgraph*, Scene*, Object*)>(fp)(std::__1::forward<Depsgraph*>(fp0), std::__1::forward<Scene*&>(fp0), std::__1::forward<Object*&>(fp0))) std::__1::__invoke<void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*, Scene*&, Object*&>(void (*&)(Depsgraph*, Scene*, Object*), Depsgraph*&&, Scene*&, Object*&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/type_traits:4339 - 10 std::__1::__bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&>, __is_valid_bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&> >::value>::type std::__1::__apply_functor<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, 0ul, 1ul, 2ul, std::__1::tuple<Depsgraph*&&> >(void (*&)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>&, std::__1::__tuple_indices<0ul, 1ul, 2ul>, std::__1::tuple<Depsgraph*&&>&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:2216 - 11 std::__1::__bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&>, __is_valid_bind_return<void (*)(Depsgraph*, Scene*, Object*), std::__1::tuple<std::__1::placeholders::__ph<1>, Scene*, Object*>, std::__1::tuple<Depsgraph*&&> >::value>::type std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>::operator()<Depsgraph*>(Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:2249 - 12 decltype(std::__1::forward<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&>(fp)(std::__1::forward<Depsgraph*>(fp0))) std::__1::__invoke<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*>(std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/type_traits:4339 - 13 void std::__1::__invoke_void_return_wrapper<void>::__call<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*>(std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>&, Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/__functional_base:349 - 14 std::__1::__function::__func<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&>, std::__1::allocator<std::__1::__bind<void (&)(Depsgraph*, Scene*, Object*), std::__1::placeholders::__ph<1> const&, Scene*&, Object*&> >, void (Depsgraph*)>::operator()(Depsgraph*&&) at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:1562 - 15 std::__1::function<void (Depsgraph*)>::operator()(Depsgraph*) const at /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/functional:1913 - 16 DEG::(anonymous namespace)::evaluate_node(DEG::(anonymous namespace)::DepsgraphEvalState const*, DEG::OperationNode*) at blender/source/blender/depsgraph/intern/eval/deg_eval.cc:116 - 17 DEG::(anonymous namespace)::deg_task_run_func(TaskPool*, void*, int) at blender/source/blender/depsgraph/intern/eval/deg_eval.cc:127 - 18 handle_local_queue [inlined] at blender/source/blender/blenlib/intern/task.c:420 - 19 BLI_task_pool_work_and_wait at blender/source/blender/blenlib/intern/task.c:944 - 20 DEG::deg_evaluate_on_refresh(DEG::Depsgraph*) at blender/source/blender/depsgraph/intern/eval/deg_eval.cc:406 - 21 ::DEG_evaluate_on_refresh(Main *, Depsgraph *) at blender/source/blender/depsgraph/intern/depsgraph_eval.cc:64 - 22 scene_graph_update_tagged at blender/source/blender/blenkernel/intern/scene.c:1314 - 23 BKE_scene_graph_update_tagged at blender/source/blender/blenkernel/intern/scene.c:1353 - 24 wm_event_do_depsgraph at blender/source/blender/windowmanager/intern/wm_event_system.c:359 - 25 wm_event_do_refresh_wm_and_depsgraph at blender/source/blender/windowmanager/intern/wm_event_system.c:385 - 26 wm_event_do_notifiers at blender/source/blender/windowmanager/intern/wm_event_system.c:550 - 27 WM_main at blender/source/blender/windowmanager/intern/wm.c:450 #28 main at blender/source/creator/creator.c:524 ```
Member

Was cleaning up the trace.

Was cleaning up the trace.

This issue was referenced by ac02c702e5

This issue was referenced by ac02c702e5ecfd1a01f0c377dc30336a473580ca

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75156
No description provided.