Fix T75156: Cast modifier crash in edit-mode

Add NULL checks to other deform modifiers too.